# librga-android

./: .gitignore  README.md  build.gradle  settings.gradle
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
librga/: build.gradle
librga/src/androidTest/kotlin/com/rockchip/librga/: ExampleInstrumentedTest.kt
librga/src/main/: AndroidManifest.xml
librga/src/main/cpp/: CMakeLists.txt  librga_jni.cpp
librga/src/main/cpp/include/: GrallocOps.h  RgaApi.h  RgaMutex.h  RgaSingleton.h  RgaUtils.h  RockchipRga.h  drmrga.h  im2d.h  im2d.hpp  im2d_buffer.h  im2d_common.h  im2d_expand.h  im2d_mpi.h  im2d_single.h  im2d_task.h  im2d_type.h  im2d_version.h  rga.h
librga/src/main/kotlin/com/rockchip/librga/: MainActivity.kt  Rga.kt
librga/src/main/res/layout/: activity_main.xml
librga/src/main/res/values/: strings.xml
librga/src/test/kotlin/com/rockchip/librga/: ExampleUnitTest.kt
